# hey-nilo

./: .gitignore  AGENTS.md  FEATURES_PLAN.md  LICENSE  MEMORY_IMPLEMENTATION_STATUS.md  MODEL_EXPANSION_SUMMARY.md  NEXT_SESSION_PROMPT.md  PLANNING.md  SECURITY_AUDIT.md  SESSION_LOG_2025_03_27.md  SESSION_LOG_2025_03_30.md  SESSION_LOG_2025_04_02.md  SESSION_LOG_2025_04_03.md  SESSION_SUMMARY.md  TODO.md  build-and-copy.sh  install_with_model.sh  rebuild-release.sh
logs/: SESSION_LOG_TEMPLATE.md  session-2025-03-08.md  session-2025-03-09-evening.md  session-2025-03-10-ui-tts-fixes.md  session-2025-03-10-voice-fixes.md  session-2025-03-10.md  session-2025-03-30.md  session-2025-03-31.md  session-2026-03-17-playstore-prep.md  session-2026-03-21.md
native_android/: .gitignore  DEVELOPMENT_LOG.md  README.md  build.gradle  gradle.properties  settings.gradle
native_android/app/: build.gradle  proguard-rules.pro
native_android/app/src/main/: AndroidManifest.xml
native_android/app/src/main/assets/models/: README.md
native_android/app/src/main/cpp/: CMakeLists.txt  ai_chat_jni.cpp  audio_jni.cpp  bridge_jni.cpp  sherpa_stt_jni.cpp  sherpa_tts_jni.cpp  vad_jni.cpp  whisper_jni.cpp
native_android/app/src/main/java/com/k2fsa/sherpa/onnx/: OfflineRecognizer.kt  OfflineTts.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/: InferenceQueue.kt  MainActivity.kt  ModelDownloader.kt  PerformanceMetrics.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/bridge/: ApiKeyStore.kt  AudioBridge.kt  BaseBridge.kt  BridgeManager.kt  DeviceInfo.kt  FileSystemManager.kt  KokoroTTSBridge.kt  LlamaBridge.kt  MemoryCompaction.kt  MemoryExtractionHelper.kt  MemoryInitialization.kt  MemoryManager.kt  MockSTTBridge.kt  MockVADBridge.kt  MoonshineSTTBridge.kt  QueryClassifier.kt  RealSTTBridge.kt  STTBridgeInterface.kt  SherpaSTTBridge.kt  SherpaTTSBridge.kt  SimpleAudioRecorder.kt  TTSBridge.kt  VADBridge.kt  VoicePipelineManager.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/bridge/llm/: LLMModels.kt  LLMProvider.kt  OfflineLLMProvider.kt  OnlineLLMProvider.kt  SystemPromptBuilder.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/model/: ConversationManager.kt  CustomModelManager.kt  ModelInfo.kt  OfflineModelConfig.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/model/memory/: Conversation.kt  MemoryDefaults.kt  MemoryStats.kt  Relationship.kt  Reminder.kt  UserProfile.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/service/: BootReceiver.kt  OpenSourceWakeWordService.kt  WakeWordManager.kt  WakeWordService.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/ui/: HuggingFaceSearchScreen.kt  ModelSetupView.kt  OfflineModelPickerScreen.kt  OnlineSetupDialog.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/ui/components/: RamOptimizer.kt  StatusBar.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/ui/memory/: MemoryManagerScreen.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/ui/theme/: Color.kt  Theme.kt  Type.kt
native_android/app/src/main/java/com/projekt_x/studybuddy/util/: CopyAssetToExternal.kt  HuggingFaceClient.kt  LastModelPreference.kt  ModelExtractor.kt
native_android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_background.xml
native_android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
native_android/app/src/main/res/xml/: data_extraction_rules.xml
native_android/app/src/test/java/com/projekt_x/studybuddy/: MemoryManagerTest.kt
